fix: 修改文档及打包信息

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="doc"></div>
-    <script async src="https://snack.expo.dev/embed.js"></script>
+    <script async src="https://storage.360buyimg.com/pandoracdn/js/expo/embed.js"></script>
     <script type="module" src="/sites/main.tsx"></script>
 
   </body>
